feat:serverside report
